--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="banuprathap_at_live_dot_com">banu</maintainer>
+  <maintainer email="banu@example.com">banu</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
