--- a/package.xml
+++ b/package.xml
@@ -45,7 +45,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>move_base_msgs</build_depend>
-  <build_depend>move_base</build_depend>
+  <build_depend>base_local_planner</build_depend>
   <build_depend>nav_core</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -53,7 +53,7 @@
   <run_depend>tf</run_depend>
   <run_depend>move_base_msgs</run_depend>
   <run_depend>nav_core</run_depend>
-  <run_depend>move_base</run_depend>
+  <run_depend>base_local_planner</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
