--- a/.travis.yml
+++ b/.travis.yml
@@ -115,3 +115,6 @@ script:
   # Run the tests, ensuring the path is set correctly.
   - source devel/setup.bash
   - catkin_make run_tests && catkin_test_results
+
+after_success:
+  - coveralls
